--- a/07-HTTP-AND-REST/03. Github-Repos-by-Username/index.html
+++ b/07-HTTP-AND-REST/03. Github-Repos-by-Username/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <label for="username">GitHub username:</label>
-    <input type="text" id="username" value="k1r1L" />
+    <input type="text" id="username"/>
     <button onclick="loadRepos()">Load Repos</button>
     <ul id="repos">
         <li>
